--- a/docs/index.Rmd
+++ b/docs/index.Rmd
@@ -1,6 +1,6 @@
 ---
 title: 'Unsupervised Learning : Exploring and Visualizing Extracted Dimensions from Principal Component Algorithms'
-author: "John Pauline Pineda"
+author: "<b><a href='https://github.com/JohnPaulinePineda'>John Pauline Pineda</a></b>"
 date: "June 4, 2023"
 output: 
   html_document:
@@ -74,7 +74,7 @@ library(pls)
 library(corrplot)
 library(tidyverse)
 library(lares)
-library(DMwR)
+library(DMwR2)
 library(gridExtra)
 library(rattle)
 library(RColorBrewer)
@@ -84,10 +84,15 @@ library(FactoMineR)
 library(gplots)
 
 ##################################
+# Defining file paths
+##################################
+DATASETS_PATH <- file.path("datasets")
+
+##################################
 # Loading source and
 # formulating the analysis set
 ##################################
-Oscars <- read.csv("Oscars.csv",
+Oscars <- read.csv(file.path("..", DATASETS_PATH, "Oscars.csv"),
                    na.strings=c("NA","NaN"," ",""),
                    stringsAsFactors = FALSE)
 Oscars <- as.data.frame(Oscars)
@@ -2607,7 +2612,9 @@ Picture <- as.factor(SD_MFA[,"Picture"])
 
 <details><summary><mark style="background-color: #000000;color: #FFFFFF">**Code Chunk | Output**</mark></summary>
 
+
 ```{r section_1.5.5, warning=FALSE, message=FALSE}
+
 ##################################
 # Loading dataset
 ##################################
@@ -2624,6 +2631,7 @@ DR_FAMD <- FAMD(SD_FAMD[,c(1:3)],
 # Obtaining the FAMD eigenvalues
 ##################################
 (DR_FAMD_EV <- get_eigenvalue(DR_FAMD))
+
 
 ##################################
 # Formulating the Scree Plot
@@ -2825,7 +2833,7 @@ DR_FAMD_IND$contrib[,c("Dim.1","Dim.2")]
 ##################################
 (DR_FAMD_IndividualFAMDGraphQualitativeVariable <- fviz_famd_ind(DR_FAMD,
              geom.ind = "text",
-             col.ind = SD_FAMD$Cinematography,
+             habillage = SD_FAMD$Cinematography,
              palette = c("#888888","#5544FF","#F18EDE"),
              repel = TRUE, 
              col.quali.var = "#FF0000",
@@ -2838,9 +2846,11 @@ DR_FAMD_IND$contrib[,c("Dim.1","Dim.2")]
   theme_classic() +
   theme(legend.position="top"))
 
+
+
 (DR_FAMD_IndividualFAMDGraphQualitativeVariable <- fviz_famd_ind(DR_FAMD,
              geom.ind = "text",
-             col.ind = SD_FAMD$Directing,
+             habillage = SD_FAMD$Directing,
              palette = c("#888888","#5544FF","#F18EDE"),
              repel = TRUE, 
              col.quali.var = "#FF0000",
@@ -2855,7 +2865,7 @@ DR_FAMD_IND$contrib[,c("Dim.1","Dim.2")]
 
 (DR_FAMD_IndividualFAMDGraphQualitativeVariable <- fviz_famd_ind(DR_FAMD,
              geom.ind = "text",
-             col.ind = SD_FAMD$Editing,
+             habillage = SD_FAMD$Editing,
              palette = c("#888888","#5544FF","#F18EDE"),
              repel = TRUE, 
              col.quali.var = "#FF0000",
@@ -2870,7 +2880,7 @@ DR_FAMD_IND$contrib[,c("Dim.1","Dim.2")]
 
 (DR_FAMD_IndividualFAMDGraphQualitativeVariable <- fviz_famd_ind(DR_FAMD,
              geom.ind = "text",
-             col.ind = SD_FAMD$Screenplay,
+             habillage = SD_FAMD$Screenplay,
              palette = c("#888888","#5544FF","#F18EDE"),
              repel = TRUE, 
              col.quali.var = "#FF0000",
@@ -2935,7 +2945,7 @@ grid.arrange(DR_CA_SymmetricBiplot_Cinematography,
 |
 # **2. Summary** <a name="summary"></a>
 |
-| ![](D:/Github_Codes/ProjectPortfolio/Portfolio_Project_33/docs/Project33_Summary.png)
+| ![](D:/Github_Codes/ProjectPortfolio/Portfolio_Project_33/images/Project33_Summary.png)
 |
 # **3. References**
 |
@@ -2960,7 +2970,7 @@ grid.arrange(DR_CA_SymmetricBiplot_Cinematography,
 | **[R Package]** [corrplot](https://cran.r-project.org/web/packages/corrplot/corrplot.pdf) by Taiyun Wei
 | **[R Package]** [tidyverse](https://cran.r-project.org/web/packages/tidyverse/tidyverse.pdf) by Hadley Wickham
 | **[R Package]** [lares](https://cran.rstudio.com/web/packages/lares/lares.pdf) by Bernardo Lares
-| **[R Package]** [DMwR](https://mran.microsoft.com/snapshot/2016-05-02/web/packages/DMwR/DMwR.pdf) by Luis Torgo
+| **[R Package]** [DMwR2](https://mran.microsoft.com/snapshot/2016-05-02/web/packages/DMwR/DMwR.pdf) by Luis Torgo
 | **[R Package]** [gridExtra](https://cran.r-project.org/web/packages/gridExtra/gridExtra.pdf) by Baptiste Auguie and Anton Antonov
 | **[R Package]** [rattle](https://cran.r-project.org/web/packages/rattle/rattle.pdf) by Graham Williams
 | **[R Package]** [RColorBrewer](https://cran.r-project.org/web//packages/RColorBrewer/RColorBrewer.pdf) by Erich Neuwirth
